<resources>
    <string name="app_name">NITJ Hostel App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nitj_hostel">NITJ Hostel App</string>
    <string name="menu_policy">Hostel Policy</string>
    <string name="menu_Complaints">Complaint Sections</string>
    <string name="menu_hostel">NITJ Hostels</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_accountsettings">Account Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>


</resources>